bug fixing a* reruns

--- a/notebooks/a-star_path_finder.ipynb
+++ b/notebooks/a-star_path_finder.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "    def __init__(self, x: int, y: int):\n",
     "        self.x = x\n",
     "        self.y = y\n",
-    "        self.blocked = Node.draw_blocking_condition()\n",
+    "        self.blocked = False if (x == 0 and y == 0) else Node.draw_blocking_condition()\n",
     "\n",
     "    \"\"\"\n",
     "    Generate a binomial random distribution of '0' and '1's\n",
@@ -46,7 +46,7 @@
     "    \"\"\"\n",
     "    @classmethod\n",
     "    def draw_blocking_condition(cls):\n",
-    "        dist = np.random.binomial(1, 0.8)\n",
+    "        dist = np.random.binomial(1, 0.75)\n",
     "        return True if dist == 0 else False\n",
     "\n",
     "    @property\n",
@@ -63,24 +63,43 @@
     "        pass\n",
     "\n",
     "    def __hash__(self):\n",
-    "        return self.id.__hash__()"
+    "        return self.id.__hash__()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Terrain(Enum):\n",
     "    Asphalt = (\"Terra\", 1)\n",
     "    Flooding = (\"Agua\", 3)\n",
-    "    Quicksand = (\"Areia Movedica\", 6)\n"
+    "    Quicksand = (\"Areia Movedica\", 6)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def lookup(cls, id: int) -> Optional['Terrain']:\n",
+    "        terrain_map = {\n",
+    "            0: Terrain.Flooding,\n",
+    "            1: Terrain.Quicksand,\n",
+    "            2: Terrain.Asphalt\n",
+    "        }\n",
+    "        return terrain_map.get(id, Terrain.Asphalt)\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Generate a binomial random distribution of '0', '1's and '2's \n",
+    "    with 80% chance to get a '2', where the IDs defining each terrain are\n",
+    "    set in the Terrain class:\n",
+    "    \"\"\"\n",
+    "    @classmethod\n",
+    "    def draw_terrain(cls):\n",
+    "        dist = np.random.binomial(2, 0.8)\n",
+    "        return Terrain.lookup(dist)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,14 +117,14 @@
     "    @property\n",
     "    def weight(self):\n",
     "        return self.terrain.value[1]\n",
-    "    \n",
+    "\n",
     "    def update_terrain(self, terrain: Terrain):\n",
-    "        self.terrain = terrain"
+    "        self.terrain = terrain\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,25 +140,33 @@
     "    def get_node(self, x: int, y: int) -> Optional[Node]:\n",
     "        return self.nodes.get((x,y))\n",
     "\n",
-    "    def get_all_nodes(self):\n",
+    "    def get_all_nodes(self) -> List[Node]:\n",
     "        return list(self.nodes.values())\n",
     "\n",
-    "    def get_blocked_nodes(self):\n",
+    "    def get_available_nodes(self) -> List[Node]:\n",
+    "        all_nodes = self.get_all_nodes()\n",
+    "        return list(filter(lambda node: node.is_free(), all_nodes))\n",
+    "\n",
+    "    def get_blocked_nodes(self) -> List[Node]:\n",
     "        all_nodes = self.get_all_nodes()\n",
     "        return list(filter(lambda node: node.is_blocked(), all_nodes))\n",
     "\n",
-    "    def find_neighbors_of(self, node: Node):\n",
+    "    def find_edge_connecting(self, source: Node, target: Node) -> Optional[Edge]:\n",
+    "        return self.edges.get((source, target))\n",
+    "\n",
+    "    def find_edges_whose_source_is(self, node: Node) -> List[Edge]:\n",
+    "        neighbors: List[Node] = self.find_neighbors_of(node)\n",
+    "        return [self.find_edge_connecting(node, neighbor) for neighbor in neighbors]\n",
+    "\n",
+    "    def find_neighbors_of(self, node: Node) -> List[Node]:\n",
     "        if node.is_free():\n",
     "            for pos in self._find_neighbors_pos_estimation(node):\n",
     "                neighbor: Optional[Node] = self.nodes.get(pos)\n",
     "                if neighbor != None and neighbor.is_free():\n",
     "                    yield self.nodes.get(pos)\n",
     "\n",
-    "    def find_edge_connecting(self, source: Node, dest: Node):\n",
-    "        return self.edges.get((source, dest))\n",
-    "\n",
     "    \"\"\"\n",
-    "    estimated positions return a list of expected neighbors as follows: \n",
+    "    estimated positions return a list of expected neighbors as follows:\n",
     "    up, down, left, right, up_right, up_left, down_right, down_left\n",
     "    \"\"\"\n",
     "    def _find_neighbors_pos_estimation(self, node: Node):\n",
@@ -167,7 +194,7 @@
     "    def with_edge(self, edge: Edge):\n",
     "        src = edge.source\n",
     "        dest = edge.destination\n",
-    "        self.edges[src,dest] = edge\n",
+    "        self.edges[src, dest] = edge\n",
     "        return self\n",
     "\n",
     "    def with_edges(self, edges: List[Edge]):\n",
@@ -194,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,68 +233,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "area_width = 4\n",
-    "area_height = 4"
+    "area_width = 10\n",
+    "area_height = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "nodes = list(generate_nodes(area_width, area_height))\n",
-    "graph = Graph().reset().with_nodes(nodes)"
+    "graph = Graph().with_nodes(nodes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Node(x=1, y=0, blocked=True),\n",
-       " Node(x=1, y=1, blocked=True),\n",
-       " Node(x=1, y=2, blocked=True),\n",
-       " Node(x=2, y=1, blocked=True),\n",
-       " Node(x=2, y=2, blocked=True),\n",
-       " Node(x=2, y=3, blocked=True),\n",
-       " Node(x=3, y=1, blocked=True)]"
-      ]
-     },
-     "execution_count": 206,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "graph.get_blocked_nodes()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "## For debugging purposes only\n",
     "\n",
-    "# entries = [(1,1), (1,2), (2,2)]\n",
+    "# nodes = list(generate_nodes(4, 4))\n",
+    "# graph = Graph().with_nodes(nodes)\n",
     "\n",
-    "# for entry in entries:\n",
-    "#     node = graph.nodes.get(entry)\n",
-    "#     node.blocked = True\n"
+    "# blocked_entries = set([(1,1), (1,2), (2,2)])\n",
+    "\n",
+    "# for node in graph.get_all_nodes():\n",
+    "#     if node.id in blocked_entries:\n",
+    "#         node.blocked = True\n",
+    "#     else:\n",
+    "#         node.blocked = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,6 +281,36 @@
     "    neighbors: List[Node] = graph.find_neighbors_of(node)\n",
     "    edges: List[Edge] = [Edge(node, neighbor) for neighbor in neighbors]\n",
     "    graph.with_edges(edges)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## For debugging purposes only\n",
+    "\n",
+    "# node10 = graph.get_node(1, 0)\n",
+    "# node21 = graph.get_node(2, 1)\n",
+    "# edge = graph.find_edge_connecting(node10, node21)\n",
+    "# edge.update_terrain(Terrain.Quicksand)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sorting the Nodes to change the Terrain type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes = graph.get_available_nodes()\n"
    ]
   },
   {
@@ -293,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,10 +339,13 @@
     "\n",
     "    def __init__(self, graph: Graph):\n",
     "        self.graph = graph\n",
-    "        self.visited_nodes = set()\n",
-    "        self.path_stack = stack()\n",
     "\n",
     "    def shortest_path_between(self, source: Node, target: Node) -> List[Node]:\n",
+    "        self.visited_nodes = set()\n",
+    "        self.path_stack = stack()\n",
+    "        return self._shortest_path_between(source, target)\n",
+    "\n",
+    "    def _shortest_path_between(self, source: Node, target: Node) -> List[Node]:\n",
     "        neighbors: Set[Node] = set(graph.find_neighbors_of(source))\n",
     "        available_neighbors = neighbors.difference(self.visited_nodes)\n",
     "\n",
@@ -323,7 +362,7 @@
     "\n",
     "                self.visited_nodes.add(source)\n",
     "                self.path_stack.append(source)\n",
-    "                return self.shortest_path_between(source=selected_neighbor, target=target)\n",
+    "                return self._shortest_path_between(source=selected_neighbor, target=target)\n",
     "\n",
     "            else:\n",
     "                # Rollback\n",
@@ -331,63 +370,30 @@
     "                    last_visited_node = self.path_stack.pop()\n",
     "                    self.visited_nodes.remove(last_visited_node)\n",
     "                    self.visited_nodes.add(source)\n",
-    "                    return self.shortest_path_between(source=last_visited_node, target=target)\n",
+    "                    return self._shortest_path_between(source=last_visited_node, target=target)\n",
     "                except IndexError:\n",
     "                    return self.path_stack\n",
     "\n",
     "    def distance_between(self, node: Node, target: Node, cost_to_node: int):\n",
     "        euclidian_dist = pow(target.x - node.x,2) + pow(target.y - node.y,2)\n",
     "        heuristic = math.sqrt(euclidian_dist) + cost_to_node\n",
-    "        return node, heuristic"
+    "        return node, heuristic\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "a_star = AStarAlgorithm(graph)\n",
     "source = graph.nodes.get((0, 0))\n",
-    "target = graph.nodes.get((area_width-1, area_height-1))"
+    "target = graph.nodes.get((area_width-1, area_height-1))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = a_star.shortest_path_between(source, target)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 200,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Node(x=0, y=3, blocked=True),\n",
-       " Node(x=1, y=1, blocked=True),\n",
-       " Node(x=1, y=2, blocked=True),\n",
-       " Node(x=1, y=3, blocked=True),\n",
-       " Node(x=3, y=1, blocked=True)]"
-      ]
-     },
-     "execution_count": 200,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(graph.get_blocked_nodes())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -395,20 +401,34 @@
       "text/plain": [
        "deque([Node(x=0, y=0, blocked=False),\n",
        "       Node(x=0, y=1, blocked=False),\n",
-       "       Node(x=1, y=0, blocked=False),\n",
-       "       Node(x=2, y=1, blocked=False),\n",
-       "       Node(x=3, y=2, blocked=False),\n",
-       "       Node(x=3, y=3, blocked=False)])"
+       "       Node(x=1, y=2, blocked=False),\n",
+       "       Node(x=2, y=3, blocked=False),\n",
+       "       Node(x=3, y=4, blocked=False),\n",
+       "       Node(x=4, y=5, blocked=False),\n",
+       "       Node(x=5, y=4, blocked=False),\n",
+       "       Node(x=6, y=5, blocked=False),\n",
+       "       Node(x=7, y=6, blocked=False),\n",
+       "       Node(x=8, y=7, blocked=False),\n",
+       "       Node(x=9, y=8, blocked=False),\n",
+       "       Node(x=9, y=9, blocked=False)])"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "path = a_star.shortest_path_between(source, target)\n",
     "path"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -427,9 +447,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 64-bit",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python38264bit2c1b7a46cd9945cba13568f8d3df8e1e"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -441,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
