--- a/notebooks/a-star_path_finder.ipynb
+++ b/notebooks/a-star_path_finder.ipynb
@@ -306,11 +306,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes = graph.get_available_nodes()\n"
+    "nodes = graph.get_available_nodes()\n",
+    "\n",
+    "## TODO: randomly sort some nodes to change their terrain type"
    ]
   },
   {
