impl. graph construction

--- a/notebooks/travelling_knapsack.ipynb
+++ b/notebooks/travelling_knapsack.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,12 +47,12 @@
     "        self.name = name\n",
     "        self.items = set()\n",
     "\n",
-    "    def add_item(self, item: Item):\n",
-    "        self.items.add(item)\n",
-    "        return self\n",
+    "    def add_item(self, name: str, value: float, weight, tts: int) -> 'Node':\n",
+    "        item = Item(name, value, weight, time_to_steal=tts)\n",
+    "        return self._add_item(item)\n",
     "\n",
-    "    def add_items(self, items: Sequence['Item']):\n",
-    "        [self.add_item(item) for item in items]\n",
+    "    def _add_item(self, item: Item) -> 'Node':\n",
+    "        self.items.add(item)\n",
     "        return self\n",
     "\n",
     "    def __hash__(self) -> int:\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Graph:\n",
     "    nodes: Dict[str,Node]\n",
     "    edges: Dict[Tuple[Node,Node], Edge]\n",
-    "    connections: Dict[Node, List[Edge]]\n",
+    "    connections: Dict[Node, Set[Edge]]\n",
     "\n",
     "    def __init__(self):\n",
     "        self.nodes = dict()\n",
@@ -132,10 +132,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "travelling_map = \"~/Vault/senac/artificial-intelligence-101/datasets/travelling_map.csv\"\n",
+    "treasure_map = \"~/Vault/senac/artificial-intelligence-101/datasets/treasure_map.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = Graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "travels = pd.read_csv(travelling_map)\n",
+    "treasures = pd.read_csv(treasure_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>source</th>\n",
+       "      <th>destination</th>\n",
+       "      <th>travelling_time</th>\n",
+       "      <th>travelling_cost</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Escondidos</td>\n",
+       "      <td>Santa Paula</td>\n",
+       "      <td>6</td>\n",
+       "      <td>780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Escondidos</td>\n",
+       "      <td>Campos</td>\n",
+       "      <td>5</td>\n",
+       "      <td>350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Escondidos</td>\n",
+       "      <td>Riacho de Fevereiro</td>\n",
+       "      <td>1</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Escondidos</td>\n",
+       "      <td>Algas</td>\n",
+       "      <td>7</td>\n",
+       "      <td>658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Escondidos</td>\n",
+       "      <td>Além-do-Mar</td>\n",
+       "      <td>5</td>\n",
+       "      <td>535</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       source          destination  travelling_time  travelling_cost\n",
+       "0  Escondidos          Santa Paula                6              780\n",
+       "1  Escondidos               Campos                5              350\n",
+       "2  Escondidos  Riacho de Fevereiro                1               65\n",
+       "3  Escondidos                Algas                7              658\n",
+       "4  Escondidos          Além-do-Mar                5              535"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "travels.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "travels.apply(lambda row: g.add_edge(row['source'],\n",
+    "                                     row['destination'],\n",
+    "                                     row['travelling_time'],\n",
+    "                                     row['travelling_cost']), axis=1)\n",
+    "\n",
+    "nodes = treasures.apply(lambda row: g.get_node(row['city'])\n",
+    "                                     .add_item(row['name'],\n",
+    "                                               row['value'],\n",
+    "                                               row['weight'],\n",
+    "                                               row['tts']), axis=1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -143,13 +273,6 @@
    "source": [
     "# Problem Solving "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
